--- a/app/views/grids/sections/_communities.html.haml
+++ b/app/views/grids/sections/_communities.html.haml
@@ -1,7 +1,7 @@
 .my-5.mx-3.mx-md-5.mt-3{
   data: {
     controller: "maps-bridge",
-    "maps-bridge-default-layer-url-value": community_locations_grid_maps_path(@grid, format: :json)
+    "maps-bridge-default-layer-url-value": community_locations_grid_maps_path(@grid)
   }
 }
   #communities.anchor-offset{ data: { "maps-bridge-target": "trigger" } }
