--- a/app/views/searches/advanced/_community_card.html.haml
+++ b/app/views/searches/advanced/_community_card.html.haml
@@ -5,27 +5,34 @@
     %h5.mb-1
       = link_to community.name, community_path(community), class: "text-decoration-none"
 
-    %div
-      - if (g = community.grid).present?
-        = link_to grid_path(g), class: "badge bg-light text-body border m-1 text-decoration-none" do
-          %i.bi.bi-grid-3x3-gap.m-0
-          = g.name
-      %span.badge.bg-secondary.text-light.m-0= community.borough&.name
-      - if community.regional_corporation
-        %span.badge.bg-success.text-light.m-0= community.regional_corporation.name
+    / === TAGS AREA ===
+    .d-flex.flex-wrap.gap-1
+      - if community.respond_to?(:grids)
+        - community.grids.each do |g|
+          = link_to grid_path(g), class: "badge bg-light text-body border text-decoration-none" do
+            %i.bi.bi-grid-3x3-gap.me-1
+            = g.name
 
-      / --- Senate & House districts (show if available) ---
-      - sen_dists = Array(community.try(:senate_districts) || community.try(:senate_district)).compact
-      - sen_dists.each do |d|
-        %span.badge.bg-info-subtle.text-info.border-info
-          %i.bi.bi-bank.m-0
-          = "Senate District #{d}"
+      - if (b = community.borough).present?
+        %span.badge.bg-secondary.text-light
+          = b.name
 
-      - house_dists = Array(community.try(:house_districts) || community.try(:house_district)).compact
-      - house_dists.each do |d|
-        %span.badge.bg-primary-subtle.text-primary.border.m-0
-          %i.bi.bi-house.m-0
-          = "House District #{d}"
+      - if (rc = community.regional_corporation).present?
+        %span.badge.bg-success.text-light
+          = rc.name
+
+      - if community.respond_to?(:senate_districts)
+        - community.senate_districts.each do |d|
+          %span.badge.bg-info-subtle.text-dark.border
+            %i.bi.bi-bank.me-1
+            = "Senate District #{d.district || d}"
+
+      - if community.respond_to?(:house_districts)
+        - community.house_districts.each do |d|
+          %span.badge.bg-primary-subtle.text-primary.border
+            %i.bi.bi-house.me-1
+            - label = d.respond_to?(:name) && d.name.present? ? d.name : "House District #{d.district || d}"
+            = label
 
   .mt-2
     = link_to 'View Community', community_path(community),
@@ -39,4 +46,4 @@
           = link_to dataset.title, "#"
           %span.text-muted.small.ms-2= dataset.try(:organization)
   - else
-
+    -# no datasets shown
