--- a/app/views/communities/sections/background/population/_population_age_chart.html.haml
+++ b/app/views/communities/sections/background/population/_population_age_chart.html.haml
@@ -1,10 +1,8 @@
 %p This chart shows estimated population with the margin of error stacked on top to indicate uncertainty.
-= bar_chart age_group_estimates_with_moe_data(@community),
+= bar_chart age_distribution_community_charts_path(@community),
   title:  "Population Estimates by Age with Margin of Error",
   stacked: true,
-  xtitle: "Count",
+  xtitle: "Population Count",
   ytitle: "Age Group",
   colors: ["#1f77b4", "#ff7f0e"],
-  download: {filename: "#{@community.name}age_group_estimates_with_moe_data"}
-
-
+  download: {filename: "#{@community.name}age_distribution"}
