--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -121,7 +121,7 @@
                   data: {
                     action: "change->maps#toggleLayer",
                     url: bulk_fuel_facilities_community_maps_path(@community),
-                    color: "#E74C3C",
+                    color: "#786a39",
                     fit: true
                   }
                 }
@@ -129,7 +129,7 @@
 
         / --- Map fills remaining height
         .flex-grow-1.position-relative
-          %div{ data: { maps_target: "map" }, style: "position:absolute; inset:0; width:100%; height:100%;" }
+          .h-100{ data: { maps_target: "map" } }
 
   / RIGHT: main content 
   .col-md-7
