--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -2,8 +2,8 @@
   = image_tag "aedg-logo.png", alt: "AEDG Logo", class: "img-fluid mb-5 w-50"
 
   %h2.mb-5.fw-bold Energy Data for Alaska Communities
-  = render 'searches/simple_search'
-  
+  = render 'communities/simple_search'
+
   .row.justify-content-center.g-4.mt-2
     .col-md-4.d-flex
       = link_to user_guide_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
