Add support for required fields in PopulationAgeSex.most_recent_for, to display latest chart data based on availability

--- a/app/views/communities/sections/background/population/_population_age_chart.html.haml
+++ b/app/views/communities/sections/background/population/_population_age_chart.html.haml
@@ -1,6 +1,6 @@
 %p This chart shows estimated population with the margin of error stacked on top to indicate uncertainty.
 = bar_chart age_distribution_community_charts_path(@community),
-  title:  "Population Estimates by Age with Margin of Error",
+  title:  "Population Estimates by Age",
   stacked: true,
   xtitle: "Population Count",
   ytitle: "Age Group",
