--- a/app/views/communities/sections/background/_population.html.haml
+++ b/app/views/communities/sections/background/_population.html.haml
@@ -1,6 +1,8 @@
 - employment_present = @community.population.present?
 - age_data_present = @community.population_age_sexes.present?
-- most_recent_population = PopulationAgeSex.most_recent_for(@community)
+- @most_recent_population = PopulationAgeSex.most_recent_for(@community)
+- start_year = @most_recent_population.start_year
+- end_year = @most_recent_population.end_year
 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-people-fill.me-2.fs-4
@@ -9,14 +11,14 @@
 
 .d-flex.justify-content-between.align-items-center.bg-body-secondary.p-3.rounded.mb-3.flex-wrap
   %div
-    %i.bi.bi-info-circle-fill.me-2.text-aedg-navy{ data: { controller: 'tooltip', bs_toggle: 'tooltip' }, title: "American Community Survey (ACS) 5-year estimate (#{most_recent_population.start_year}–#{most_recent_population.end_year})" }
+    %i.bi.bi-info-circle-fill.me-2.text-aedg-navy{ data: { controller: 'tooltip', bs_toggle: 'tooltip' }, title: "American Community Survey (ACS) 5-year estimate (#{start_year}–#{end_year})" }
     %strong.me-2
-      Estimated Population (#{most_recent_population.end_year}):
+      Estimated Population (#{@most_recent_population.end_year}):
     %strong.text-primary.fw-bold
-      = number_with_delimiter(most_recent_population.e_pop_total)
-    - if most_recent_population.m_pop_total.present?
+      = number_with_delimiter(@most_recent_population.e_pop_total)
+    - if @most_recent_population.m_pop_total.present?
       %span.text-muted
-        (±#{number_with_delimiter(most_recent_population.m_pop_total)})
+        (±#{number_with_delimiter(@most_recent_population.m_pop_total)})
 
 %ul.nav.nav-tabs
   - if employment_present
