--- a/app/views/communities/sections/background/population/_population_age_chart.html.haml
+++ b/app/views/communities/sections/background/population/_population_age_chart.html.haml
@@ -1,6 +1,6 @@
 %p This chart shows estimated population with the margin of error stacked on top to indicate uncertainty.
 = bar_chart age_distribution_community_charts_path(@community),
-  title:  "Population Estimates by Age",
+  title:  "Population Estimates by Age (#{@most_recent_population.start_year} - #{@most_recent_population.end_year})",
   stacked: true,
   xtitle: "Population Count",
   ytitle: "Age Group",
