Add Median Household Income Chart

--- a/app/views/communities/sections/_background.html.haml
+++ b/app/views/communities/sections/_background.html.haml
@@ -12,7 +12,11 @@
 - if @community.show_population?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/background/population'
-    
+
+-if @community.show_income_section?
+  .my-5.mx-3.mx-md-5
+    = render 'communities/sections/background/income'
+
 - if @community.show_climate?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/background/climate'
