Add Povert Rate Chart

--- a/app/views/communities/sections/background/_income.html.haml
+++ b/app/views/communities/sections/background/_income.html.haml
@@ -20,3 +20,12 @@
   xtitle:   "Year",
   ytitle:   "Per Capita Income (USD)",
   download: { filename: per_capita_title.parameterize }
+
+- poverty_rate_title = "#{@community.name} - Poverty Rate"
+
+= line_chart poverty_rate_community_charts_path(@community),
+  suffix:   '%',
+  title:    poverty_rate_title,
+  xtitle:   "Year",
+  ytitle:   "Poverty Rate",
+  download: { filename: poverty_rate_title.parameterize }
