--- a/app/views/communities/sections/background/_income.html.haml
+++ b/app/views/communities/sections/background/_income.html.haml
@@ -1,37 +1,51 @@
 .d-flex.align-items-center.mb-3
-  %i.bi.bi-thermometer-snow.me-2.fs-4
+  %i.bi.bi-cash-coin.me-2.fs-4
   %h4#income.mb-0.me-3.py-3.anchor-offset Income
   %hr.flex-grow-1.mt-1.mb-0
 
-- hh_income_bracket_title = "#{@community.name} - Household Income Brackets"
+%ul.nav.nav-tabs
+  %li.nav-item
+    = link_to "#hh-income-dist-chart",
+      class: "nav-link active",
+      data: { bs_toggle: "tab" },
+      role: "tab" do
+      %i.bi.bi-bar-chart-fill.me-1
+      Household Income Distribution
 
-= column_chart household_income_brackets_community_charts_path(@community),
-  suffix:   '%',
-  title:    hh_income_bracket_title,
-  min:      0,
-  max:      100,
-  stacked:  true,
-  xtitle:   "Year",
-  round:    2,
-  zeros:    true,
-  ytitle:   "Household Income Brackets",
-  download: { filename: hh_income_bracket_title.parameterize },
-  library: { plugins: { legend: { display:true, position: 'right', reverse: true }, tooltip: { mode: 'index', intersect: false, reverse: true } }}
+  %li.nav-item
+    = link_to "#income-poverty-charts",
+      class: "nav-link",
+      data: { bs_toggle: "tab" },
+      role: "tab" do
+      %i.bi.bi-graph-up.me-1
+      Income & Poverty
 
-- income_title = "#{@community.name} - Income"
+  %li.nav-item
+    = link_to "#household-income-data",
+      class: "nav-link",
+      data: { bs_toggle: "tab" },
+      role: "tab" do
+      %i.bi.bi-table.me-1
+      Household Income Data
 
-= line_chart income_community_charts_path(@community),
-  prefix:   '$',
-  title:    income_title,
-  xtitle:   "Year",
-  ytitle:   "Income (USD)",
-  download: { filename: income_title.parameterize }
+  %li.nav-item
+    = link_to "#income-poverty-data",
+      class: "nav-link",
+      data: { bs_toggle: "tab" },
+      role: "tab" do
+      %i.bi.bi-table.me-1
+      Income Poverty Data
 
-- poverty_rate_title = "#{@community.name} - Poverty Rate"
+.tab-content.mt-3
+  .tab-pane.fade#hh-income-dist-chart{ class: "show active", role: "tabpanel" }
+    = render 'communities/sections/background/income/household_income_distribution_chart'
+    
+  .tab-pane.fade#income-poverty-charts{ role: "tabpanel" }
+    = render 'communities/sections/background/income/income_chart'
+    = render 'communities/sections/background/income/poverty_rate_chart'
 
-= line_chart poverty_rate_community_charts_path(@community),
-  suffix:   '%',
-  title:    poverty_rate_title,
-  xtitle:   "Year",
-  ytitle:   "Poverty Rate",
-  download: { filename: poverty_rate_title.parameterize }
+  .tab-pane.fade#household-income-data{ role: "tabpanel" }
+    = render 'communities/sections/background/income/household_income_data'
+
+  .tab-pane.fade#income-poverty-data{ role: "tabpanel" }
+    = render 'communities/sections/background/income/income_poverty_data'
